--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="logo-container anim-fade-in"> 
     <img ngSrc="assets/ícone.png" width="32" height="32" priority>
-    <span class="text-header">Rastreamento de entregas</span>
+    <span class="text-header">Moven'Track!</span>
   </div>
   <div class="a-btn-header">
     <a href="#titulo-first-section" class="link-header anim-header-item">O que é?</a>
@@ -43,7 +43,7 @@
 
 <section id="how-it-works-section" class="how-it-works-section">
   <div class="content-box anim-fade-in">
-    <h1 class="section-title">Simples e Poderoso</h1>
+    <h1 class="section-title">Simples e Funcional</h1>
     <div class="steps-container">
       <div class="step-item">
         <span>1</span>
@@ -64,4 +64,4 @@
   </div>
 </section>
 
-<footer> © 2025 Vinicius Teixeira. Todos os direitos reservados.</footer>
+<footer> © 2025 - Moven'Track - Vinicius Teixeira. Todos os direitos reservados.</footer>
