--- a/src/app/create-delivery/create-delivery.component.scss
+++ b/src/app/create-delivery/create-delivery.component.scss
@@ -95,6 +95,14 @@ mat-option {
   }
 }
 
+.form-row {
+  display: flex;
+  gap: 16px;
+}
+.form-row-item {
+  flex: 1;
+}
+
 .documento-fiscal-container {
   display: flex;
   flex-direction: row;
