--- a/src/app/entregas/delivery-details-modal/delivery-details-modal.component.html
+++ b/src/app/entregas/delivery-details-modal/delivery-details-modal.component.html
@@ -34,6 +34,20 @@
       <span class="label">Destino:</span>
       <span class="value">{{ entrega.destination.address }}</span>
     </div>
+
+    <div class="info-item photos-section" *ngIf="entrega.fotosInstalacao && entrega.fotosInstalacao.length > 0">
+      <span class="label">Prova de Entrega:</span>
+      <div class="photos-grid">
+        <div 
+          *ngFor="let fotoUrl of entrega.fotosInstalacao; let i = index" 
+          class="photo-thumbnail"
+          (click)="abrirFoto(fotoUrl)"
+          matTooltip="Clique para ampliar"
+        >
+          <img [src]="fotoUrl" alt="Foto {{ i + 1 }}" loading="lazy">
+        </div>
+      </div>
+    </div>
     
     <div class="actions">
       
