Alteração de ícone. Botão de registro de loja comentado.

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -8,7 +8,7 @@
     <a href="#benefits-section" class="link-header anim-header-item">Benefícios</a>
     <a href="#how-it-works-section" class="link-header anim-header-item">Como Funciona?</a>
     <button class="btn-login anim-header-item" routerLink="/card-login">LOGIN</button>
-    <button class="btn-registrar anim-header-item" routerLink="/registro-usuario">REGISTRAR!</button>
+    <!-- <button class="btn-registrar anim-header-item" routerLink="/registro-usuario">REGISTRAR!</button> -->
   </div>
 </header>
 
