Alteração de Ícone. Botão 'Registrar' não deve existir mais no painel do Lojista

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="logo-container anim-fade-in"> 
-    <img ngSrc="assets/ícone.png" width="32" height="32" priority>
+    <img ngSrc="assets/ícone2.png" width="32" height="32" priority>
     <span class="text-header">Moven'Track!</span>
   </div>
   <div class="a-btn-header">
