--- a/src/app/socorros/socorro-details-modal/socorro-details-modal.component.html
+++ b/src/app/socorros/socorro-details-modal/socorro-details-modal.component.html
@@ -8,12 +8,12 @@
 <mat-dialog-content class="modal-content">
   <div class="details-container">
     <h4>Informações</h4>
-    
+
     <div class="info-item">
       <span class="label">Status:</span>
       <span class="value">{{ socorro.status | formatStatus }}</span>
     </div>
-    
+
     <div class="info-item">
       <span class="label">Código:</span>
       <span class="value code">{{ socorro.codigoSocorro }}</span>
@@ -21,12 +21,19 @@
 
     <div class="info-item">
       <span class="label">Cliente:</span>
-      <span class="value">{{ socorro.clienteNome }} ({{ socorro.clienteTelefone }})</span>
+      <span class="value"
+        >{{ socorro.clienteNome }} ({{ socorro.clienteTelefone }})</span
+      >
     </div>
 
-    <div class="info-item" *ngIf="socorro.modeloVeiculo || socorro.placaVeiculo">
+    <div
+      class="info-item"
+      *ngIf="socorro.modeloVeiculo || socorro.placaVeiculo"
+    >
       <span class="label">Veículo:</span>
-      <span class="value">{{ socorro.modeloVeiculo }} - {{ socorro.placaVeiculo }}</span>
+      <span class="value"
+        >{{ socorro.modeloVeiculo }} - {{ socorro.placaVeiculo }}</span
+      >
     </div>
 
     <div class="info-item" *ngIf="socorro.serviceDescription">
@@ -34,7 +41,10 @@
       <span class="value">{{ socorro.serviceDescription }}</span>
     </div>
 
-    <div class="info-item" *ngIf="socorro.driverId && typeof socorro.driverId === 'object'">
+    <div
+      class="info-item"
+      *ngIf="socorro.driverId && typeof socorro.driverId === 'object'"
+    >
       <span class="label">Profissional:</span>
       <span class="value">{{ $any(socorro.driverId).nome }}</span>
     </div>
@@ -43,27 +53,57 @@
       <span class="label">Local do Cliente:</span>
       <span class="value">{{ socorro.clientLocation.address }}</span>
     </div>
-    
-    <div class="info-item photos-section" *ngIf="socorro.fotos && socorro.fotos.length > 0">
+
+    <div
+      class="info-item photos-section"
+      *ngIf="socorro.fotos && socorro.fotos.length > 0"
+    >
       <span class="label">Prova de Serviço:</span>
       <div class="photos-grid">
-        <div 
-          *ngFor="let fotoUrl of socorro.fotos; let i = index" 
+        <div
+          *ngFor="let fotoUrl of socorro.fotos; let i = index"
           class="photo-thumbnail"
           (click)="abrirFoto(fotoUrl)"
           matTooltip="Clique para ampliar"
         >
-          <img [src]="fotoUrl" alt="Foto {{ i + 1 }}" loading="lazy">
+          <img [src]="fotoUrl" alt="Foto {{ i + 1 }}" loading="lazy" />
         </div>
       </div>
     </div>
-    
+
     <div class="actions">
       <button
         mat-stroked-button
-        color="warn" 
+        color="primary"
+        (click)="onLiberarCheckIn()"
+        *ngIf="
+          !socorro.checkInLiberadoManualmente &&
+          (socorro.status === SocorroStatus.ACCEPTED ||
+            socorro.status === SocorroStatus.ON_THE_WAY)
+        "
+        class="ml-2"
+      >
+        <mat-icon>location_on</mat-icon>
+        Liberar Check-in
+      </button>
+
+      <button
+        mat-stroked-button
+        color="warn"
         (click)="onCancelarSocorro()"
-        *ngIf="socorro.status !== SocorroStatus.COMPLETED && socorro.status !== SocorroStatus.CANCELLED"
+        *ngIf="
+          socorro.status !== SocorroStatus.FINALIZADO &&
+          socorro.status !== SocorroStatus.CANCELLED
+        "
+      >
+        <mat-icon>cancel</mat-icon>
+        Cancelar Socorro
+      </button>
+      <button
+        mat-stroked-button
+        color="warn"
+        (click)="onCancelarSocorro()"
+        *ngIf="socorro.status !== SocorroStatus.FINALIZADO"
       >
         <mat-icon>cancel</mat-icon>
         Cancelar Socorro
